--- a/src/scss/feature/_header.scss
+++ b/src/scss/feature/_header.scss
@@ -2,8 +2,104 @@
 }
 
 @mixin header-PC {
-    .header-container{
+    .hdr{
         background-color: map-get($map: $color, $key: gray);
+    }
+    .hdr-container{
+        width: $container;
+        margin: 0 auto;
+        padding: 0px 65px;
+    }
+    .nav-section{
+    }
+    .nav-container{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .nav-list{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 80%;
+        .nav-item{
+            font-size: 16px;
+            font-weight: 700;
+            letter-spacing: 4px;
+            padding: 30px 0;
+            border-top: map-get($map: $color, $key: opacity-0) solid 4px;
+            &.nav-item-news:hover{
+                border-top: map-get($map: $color, $key: news) solid 4px;
+                color:  map-get($map: $color, $key: news);
+            }
+            &.nav-item-fashion:hover{
+                border-top: map-get($map: $color, $key: fashion) solid 4px;
+                color:  map-get($map: $color, $key: fashion);
+            }
+            &.nav-item-tech:hover{
+                border-top: map-get($map: $color, $key: tech) solid 4px;
+                color:  map-get($map: $color, $key: tech);
+            }
+            &.nav-item-aesthetic:hover{
+                border-top: map-get($map: $color, $key: aesthetic) solid 4px;
+                color:  map-get($map: $color, $key: aesthetic);
+            }
+            &.nav-item-fittness:hover{
+                border-top: map-get($map: $color, $key: fittness) solid 4px;
+                color:  map-get($map: $color, $key: fittness);
+            }
+            &.nav-item-expert:hover{
+                border-top: map-get($map: $color, $key: fashion) solid 4px;
+                color:  map-get($map: $color, $key: fashion);
+            }
+        }
+    }
+    .social-list{
+        display: flex;
+        justify-content: flex-end;
+        width: 20%;
+        img{
+            margin: 34px 0 30px 0;
+            width: 16px;
+            height:16px;
+            margin-left: 17px;
+        }
+    }
+    .hover-icon{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        img{
+            width: 30px;
+            height: 30px;
+            margin: 4px 0 17px 0;
+        }
+    }
+    .logo-container{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .logo{
+        img{
+            height: 80px;
+        }
+    }
+    .search{
+        position: relative;
+        input[type="text"]{
+            width: 228px;
+            min-height: 30px !important;
+            border: none;
+        }
+        &::before{
+            content: url('../images/cool-health/navigation/cool-health_material-05.svg');
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            width: 20px;
+            height: 20px;
+        }
     }
 }
 
