--- a/src/scss/main/_reset.scss
+++ b/src/scss/main/_reset.scss
@@ -128,3 +128,7 @@ table {
   box-sizing: border-box;
   font-family: "Noto Sans TC", sans-serif;
 }
+button{  
+  border: none;
+  background-color: rgb(0, 0, 0, 0);
+}
