--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -1,6 +1,7 @@
 // global
 @import "./main/_variables.scss";
 @import "./main/_response.scss";
+@import "./main/_atomic.scss";
 
 // common feature
 @import "./feature/_header.scss";
