--- a/src/scss/main/_response.scss
+++ b/src/scss/main/_response.scss
@@ -1,10 +1,10 @@
 @mixin response($res) {
   @if ($res == PC) {
-    @media screen and (min-width: ($desktop-min-width + 1)) {
+    @media screen and (min-width: ($desktop-min-width)) {
       @content;
     }
   } @else if ($res == Tablet) {
-    @media screen and (min-width: ($tablet-min-width + 1)) {
+    @media screen and (max-width: ($desktop-min-width - 1)) {
       @content;
     }
   } @else if ($res == Mobile) {
