--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -9,3 +9,6 @@
 
 // index
 @import "./feature/_index.scss";
+@import "./feature/index/_promote.scss";
+@import "./feature/index/_news.scss";
+@import "./feature/index/_category.scss";
