--- a/src/scss/feature/_footer.scss
+++ b/src/scss/feature/_footer.scss
@@ -4,7 +4,12 @@
 @mixin footer-PC {
 }
 
+@mixin footer-PC-Tablet {
+}
+
 @mixin footer-Tablet {
+}
+@mixin footer-Tablet-Mobile {
 }
 
 @mixin footer-Mobile {
