--- a/src/scss/main/_atomic.scss
+++ b/src/scss/main/_atomic.scss
@@ -1,35 +1,53 @@
 @mixin atomic {
-    .D\(n\){
-        display: none;
-    }
-    .D\(b\){
-        display: block;
-    }
+  .D\(n\) {
+    display: none;
+  }
+  .D\(b\) {
+    display: block;
+  }
 }
 
 @mixin atomic-PC {
-    .D\(n\,p\){
-        display: none;
-    }
-    .D\(b\,p\){
-        display: block;
-    }
+  .D\(n\,p\) {
+    display: none;
+  }
+  .D\(b\,p\) {
+    display: block;
+  }
+}
+
+@mixin atomic-PC-Tablet {
+  .D\(n\,pt\) {
+    display: none;
+  }
+  .D\(b\,pt\) {
+    display: block;
+  }
 }
 
 @mixin atomic-Tablet {
-    .D\(n\,t\){
-        display: none;
-    }
-    .D\(b\,t\){
-        display: block;
-    }
+  .D\(n\,t\) {
+    display: none;
+  }
+  .D\(b\,t\) {
+    display: block;
+  }
+}
+
+@mixin atomic-Tablet-Mobile {
+  .D\(n\,tm\) {
+    display: none;
+  }
+  .D\(b\,tm\) {
+    display: block;
+  }
 }
 
 @mixin atomic-Mobile {
-    .D\(n\,m\){
-        display: none;
-    }
-    .D\(b\,m\){
-        display: block;
-    }
+  .D\(n\,m\) {
+    display: none;
+  }
+  .D\(b\,m\) {
+    display: block;
+  }
 }
