--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -4,10 +4,9 @@
 @import "./main/_reset.scss";
 @import "./main/common.scss";
 
-
 @include atomic;
 @include header;
 @include footer;
 @include index;
-
-
+@include promote;
+@include news;
