--- a/src/scss/_features.scss
+++ b/src/scss/_features.scss
@@ -12,3 +12,5 @@
 @import "./feature/index/_promote.scss";
 @import "./feature/index/_news.scss";
 @import "./feature/index/_category.scss";
+@import "./feature/index/_hotvideo.scss";
+@import "./feature/index/_expert.scss";
