--- a/src/scss/feature/_header.scss
+++ b/src/scss/feature/_header.scss
@@ -170,7 +170,7 @@
     align-items: center;
     padding: 0 18px;
     top: 0;
-    right: 0;
+    right: 1px;
     height: $header-hegiht-mobile;
     img {
       height: 35px;
