--- a/src/scss/feature/_index.scss
+++ b/src/scss/feature/_index.scss
@@ -3,11 +3,10 @@
     border-radius: 50%;
   }
 }
-
 @mixin index-PC {
   .conatiner {
     background-color: map-get($map: $color, $key: ghost-white);
-    width: $container;
+    max-width: $container;
     margin: 0 auto;
     padding-top: $header-hegiht-pc;
   }
@@ -15,13 +14,19 @@
 @mixin index-PC-Tablet {
 }
 @mixin index-Tablet {
+  .conatiner {
+    background-color: map-get($map: $color, $key: ghost-white);
+    max-width: $container;
+    margin: 0 auto;
+    padding-top: $header-hegiht-mobile;
+  }
 }
 @mixin index-Tablet-Mobile {
+}
+@mixin index-Mobile {
   .conatiner {
     background-color: map-get($map: $color, $key: ghost-white);
     margin: 0 auto;
     padding-top: $header-hegiht-mobile;
   }
-}
-@mixin index-Mobile {
 }
