--- a/src/scss/main/_variables.scss
+++ b/src/scss/main/_variables.scss
@@ -19,6 +19,7 @@ $color: (
   fittness: #ff8200,
   tech: #0081c1,
   aesthetic: #ff82a2,
+  expert: #002bc1,
   gray: #eaeaea,
   dark-gray: #999a9a,
   white: #fff,
