--- a/src/scss/feature/index/_category.scss
+++ b/src/scss/feature/index/_category.scss
@@ -1,34 +1,57 @@
 @mixin category {
+  .article-desc {
+    z-index: 1;
+  }
+  .category-title {
+    &.category-title-fashion {
+      background-color: map-get($map: $color, $key: fashion);
+    }
+    &.category-title-fittness {
+      background-color: map-get($map: $color, $key: fittness);
+    }
+    &.category-title-tech {
+      background-color: map-get($map: $color, $key: tech);
+    }
+    &.category-title-aesthetic {
+      background-color: map-get($map: $color, $key: aesthetic);
+    }
+    &.category-title-expert {
+      background-color: map-get($map: $color, $key: expert);
+    }
+  }
 }
 @mixin category-PC {
 }
 @mixin category-PC-Tablet {
   .category {
+    padding: 3.4% 0 5.4% 0;
     position: relative;
-    margin: 67px 0 75px 67px;
   }
   .category-title {
     z-index: 1;
     position: absolute;
-    top: -40px;
-    left: -65px;
+    top: 0%;
+    left: 0;
     writing-mode: vertical-rl;
     text-orientation: mixed;
-    width: 133px;
+    width: 6.9vw;
+    height: 10.2vw;
     color: map-get($map: $color, $key: white);
-    background-color: map-get($map: $color, $key: fashion);
     text-align: center;
     .title {
-      font-size: 40px;
-      letter-spacing: 7px;
-      margin: 5px 10px;
+      font-size: 2.1vw;
+      letter-spacing: 0.3vw;
+      margin: auto 0.5vw;
       font-weight: 100;
     }
     .sub-title {
-      font-size: 12px;
+      font-size: 0.6vw;
       font-weight: 700;
-      letter-spacing: 6px;
+      letter-spacing: 0.25vw;
     }
+  }
+  .article-container {
+    margin: 0 0 0 5.5%;
   }
   .article-list {
     display: flex;
@@ -39,11 +62,15 @@
       object-fit: cover;
     }
     &.article-item-large {
-      max-width: 440px;
-      max-height: 605px;
-      img {
-        width: 440px;
-        height: 605px;
+      max-width: 38.9%;
+      max-height: 30.2vw;
+      a {
+        width: 100%;
+        height: 100%;
+        img {
+          width: 100%;
+          height: 100%;
+        }
       }
       .article-desc {
         bottom: 22px;
@@ -51,10 +78,15 @@
       }
     }
     &.article-item-small {
-      margin: 0 0 0 22px;
-      img {
-        width: 320px;
-        height: 290px;
+      max-width: 48.1%;
+      max-height: 14.5vw;
+      a {
+        width: 100%;
+        height: 100%;
+        img {
+          width: 100%;
+          height: 100%;
+        }
       }
       .article-desc {
         bottom: 16px;
@@ -67,20 +99,38 @@
     text-shadow: map-get($map: $color, $key: black) 2px 2px 10px;
     color: map-get($map: $color, $key: white);
     .article-date {
-      font-size: 8px;
+      font-size: 0.6vw;
       font-weight: 100;
-      margin-bottom: 20px;
+      margin-bottom: 1.1vw;
     }
     .article-title {
-      font-size: 24px;
-      line-height: 28px;
+      font-size: 1.25vw;
+      line-height: 1.5vw;
       font-weight: 500;
     }
   }
   .article-block {
+    &:first-child {
+      margin-right: 2.1%;
+    }
+
+    &:last-child {
+      margin-left: 2.1%;
+    }
+    width: 61.1%;
     display: flex;
     flex-wrap: wrap;
     align-content: space-between;
+    justify-content: space-between;
+  }
+  .ad-banner {
+    height: 200px;
+    margin-top: 2.1%;
+    width: 100%;
+    overflow: hidden;
+    img {
+      width: 100%;
+    }
   }
 }
 
@@ -90,4 +140,87 @@
 }
 
 @mixin category-Mobile {
+  .category {
+    position: relative;
+    margin-top: 95px;
+    background-color: map-get($map: $color, $key: gray);
+  }
+  .category-title-container {
+    position: absolute;
+    top: -38px;
+    left: 0;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  .category-title {
+    width: 166px;
+    height: 75px;
+    color: map-get($map: $color, $key: white);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    &.category-title-fashion {
+      background-color: map-get($map: $color, $key: fashion);
+    }
+    .title {
+      font-size: 28px;
+      letter-spacing: 6px;
+      font-weight: 100;
+      margin-bottom: 10px;
+    }
+    .sub-title {
+      font-size: 10px;
+      font-weight: 500;
+      letter-spacing: 4px;
+    }
+  }
+  .article-container {
+    margin-bottom: 104px;
+  }
+  .article-list {
+    padding-top: 51px;
+  }
+  .article-item {
+    display: flex;
+    margin-bottom: 18px;
+    width: 100%;
+    height: 33.4vw;
+    a {
+      width: 50%;
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+    .article-desc {
+      width: 50%;
+      border-top: 20px solid map-get($map: $color, $key: white);
+      border-right: 20px solid map-get($map: $color, $key: white);
+      border-bottom: 20px solid map-get($map: $color, $key: white);
+      border-left: 17px solid map-get($map: $color, $key: white);
+      background-color: map-get($map: $color, $key: white);
+      overflow: hidden;
+      .article-date {
+        font-size: 8px;
+        font-weight: 500;
+        margin-bottom: 7px;
+      }
+      .article-title {
+        font-size: 4.4vmin;
+        line-height: 6.1vmin;
+        font-weight: 700;
+      }
+    }
+  }
+  .ad-banner {
+    height: 200px;
+    margin-top: 2.1%;
+    width: 100%;
+    overflow: hidden;
+    img {
+      width: 100%;
+    }
+  }
 }
