--- a/src/scss/theme-rwd.scss
+++ b/src/scss/theme-rwd.scss
@@ -8,6 +8,8 @@
   @include promote-PC;
   @include news-PC;
   @include category-PC;
+  @include hotvideo-PC;
+  @include expert-PC;
 }
 
 @include response(PC-Tablet) {
@@ -18,6 +20,8 @@
   @include promote-PC-Tablet;
   @include news-PC-Tablet;
   @include category-PC-Tablet;
+  @include hotvideo-PC-Tablet;
+  @include expert-PC-Tablet;
 }
 
 @include response(Tablet) {
@@ -28,6 +32,8 @@
   @include promote-Tablet;
   @include news-Tablet;
   @include category-Tablet;
+  @include hotvideo-Tablet;
+  @include expert-Tablet;
 }
 
 @include response(Tablet-Mobile) {
@@ -38,6 +44,8 @@
   @include promote-Tablet-Mobile;
   @include news-Tablet-Mobile;
   @include category-Tablet-Mobile;
+  @include hotvideo-Tablet-Mobile;
+  @include expert-Tablet-Mobile;
 }
 
 @include response(Mobile) {
@@ -48,4 +56,6 @@
   @include promote-Mobile;
   @include news-Mobile;
   @include category-Mobile;
+  @include hotvideo-Mobile;
+  @include expert-Mobile;
 }
