--- a/src/scss/feature/_header.scss
+++ b/src/scss/feature/_header.scss
@@ -72,7 +72,8 @@
       &.nav-item-news {
         &:hover,
         &:active,
-        &:focus {
+        &:focus,
+        &.active {
           border-top: map-get($map: $color, $key: news) solid 4px;
           color: map-get($map: $color, $key: news);
         }
@@ -80,7 +81,8 @@
       &.nav-item-fashion {
         &:hover,
         &:active,
-        &:focus {
+        &:focus,
+        &.active {
           border-top: map-get($map: $color, $key: fashion) solid 4px;
           color: map-get($map: $color, $key: fashion);
         }
@@ -88,7 +90,8 @@
       &.nav-item-tech {
         &:hover,
         &:active,
-        &:focus {
+        &:focus,
+        &.active {
           border-top: map-get($map: $color, $key: tech) solid 4px;
           color: map-get($map: $color, $key: tech);
         }
@@ -96,7 +99,8 @@
       &.nav-item-aesthetic {
         &:hover,
         &:active,
-        &:focus {
+        &:focus,
+        &.active {
           border-top: map-get($map: $color, $key: aesthetic) solid 4px;
           color: map-get($map: $color, $key: aesthetic);
         }
@@ -104,7 +108,8 @@
       &.nav-item-fittness {
         &:hover,
         &:active,
-        &:focus {
+        &:focus,
+        &.active {
           border-top: map-get($map: $color, $key: fittness) solid 4px;
           color: map-get($map: $color, $key: fittness);
         }
@@ -112,7 +117,8 @@
       &.nav-item-expert {
         &:hover,
         &:active,
-        &:focus {
+        &:focus,
+        &.active {
           border-top: map-get($map: $color, $key: fashion) solid 4px;
           color: map-get($map: $color, $key: fashion);
         }
