--- a/src/scss/feature/_header.scss
+++ b/src/scss/feature/_header.scss
@@ -197,7 +197,7 @@
     top: $header-height-mobile;
     right: 0;
     width: 0;
-    height: 100vh;
+    height: 100%;
     background-color: map-get($map: $color, $key: white);
     transition: all 0.3s;
     &.active {
@@ -207,8 +207,8 @@
     }
   }
   .nav-container {
-    height: 91%;
-    overflow-y: scroll;
+    max-height: 85%;
+    overflow-y: auto;
     display: none;
     text-align: center;
   }
@@ -261,7 +261,7 @@
   .link-list {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 30px;
+    margin: 0 12.4%;
     a {
       font-size: 10px;
       width: 50%;
