--- a/src/scss/main/_variables.scss
+++ b/src/scss/main/_variables.scss
@@ -26,9 +26,10 @@ $color: (
   news: #b1b3b6,
   fashion: #002bc1,
   fittness: #ff8200,
-  tech: #0081c1,
-  aesthetic: #ff82a2,
+  tech: #0082c3,
+  aesthetic: #00afaf,
   expert: #002bc1,
+  gender: #ff82a0,
   gray: #eaeaea,
   dark-gray: #999a9a,
   white: #fff,
