--- a/src/scss/feature/index/_promote.scss
+++ b/src/scss/feature/index/_promote.scss
@@ -27,6 +27,9 @@
     &.promote-slide-item-aesthetic {
       border-left: map-get($map: $color, $key: aesthetic) solid 11px;
     }
+    &.promote-slide-item-gender {
+      border-left: map-get($map: $color, $key: gender) solid 11px;
+    }
     img {
       width: 1200px;
       height: 680px;
