--- a/src/scss/feature/index/_expert.scss
+++ b/src/scss/feature/index/_expert.scss
@@ -82,7 +82,7 @@
   .expert-card {
     .expert-img {
       object-fit: cover;
-      height: 95vmin;
+      height: 95vw;
     }
     .expert-info {
       padding: 15px 19px;
