--- a/src/scss/feature/index/_promote.scss
+++ b/src/scss/feature/index/_promote.scss
@@ -14,6 +14,9 @@
 @mixin promote-PC {
 }
 @mixin promote-PC-Tablet {
+  .promote {
+    padding-top: $header-height-pc;
+  }
   .promote-slide-item {
     &.promote-slide-item-fashion {
       border-left: map-get($map: $color, $key: fashion) solid 11px;
@@ -32,8 +35,7 @@
     }
     img {
       object-fit: cover;
-      width: 1200px;
-      height: 680px;
+      height: calc(100vh - #{$header-height-pc});
     }
   }
   .promote-slide-title {
@@ -69,6 +71,9 @@
 @mixin promote-Tablet-Mobile {
 }
 @mixin promote-Mobile {
+  .promote {
+    padding-top: $header-height-mobile;
+  }
   .promote-slide-item {
     height: 61.5vmax;
     img {
